src/test/ui/underscore-lifetime/where-clause-inherent-impl-underscore.rust2018.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/where-clause-inherent-impl-underscore.rs:13:19
   |
LL |     T: WithRegion<'_>
   |                   ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a, T> Foo<T>
LL | where
LL ~     T: WithRegion<'a>
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
